-- mer., 01 déc. 2010 12:11:36 +0100

        * Autorise un paramètre de type std::string pour drawText et drawTextBg.

-- lun., 22 nov. 2010 21:27:00 +0100

        * Ajout des méthodes drawTriangle et fillTriangle.
        * Ajout des méthodes getFont et setFont.
	* Indique que les chaînes sont encodées en UTF8 pour drawText.

-- mar., 27 avr. 2010 17:30:13 +0200

        * Rend les méthodes *sleep statiques.
        * Recodé en UTF8.

-- mer., 20 jan. 2010 19:20:49 +0100

        * Ajout des méthodes waitMousePress et mousePressEvent.

-- mar., 27 nov. 2007 09:31:18 +0100

        * Version initiale.